crates/facade/tests/ui/fail/invalid_level_type.rs
enum Level {
    Info,
}

fn main() {
    // Must be redefmt::Level
    redefmt::log!(Level::Info, "");
}
